Optimize starter's auto-configuration . (2021)  (#396)